--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,7 +14,10 @@ protoc = "2.28.0"
 tract-onnx = "0.20.7"
 prost = "0.11.8"
 prost-types = "0.11.8"
-onnx = "0.1.0"
+
+
+[build-dependencies]
+prost-build = "0.11.8"
 
 
 
