--- a/prova/cpu-count/package.json
+++ b/prova/cpu-count/package.json
@@ -1,10 +1,9 @@
 {
-  "name": "backend",
-  "version": "1.0.0",
+  "name": "cpu-count",
+  "version": "0.1.0",
   "description": "",
   "main": "index.node",
   "scripts": {
-    "start": "npm run build-release && node index.js",
     "build": "cargo-cp-artifact -nc index.node -- cargo build --message-format=json-render-diagnostics",
     "build-debug": "npm run build --",
     "build-release": "npm run build -- --release",
@@ -13,11 +12,7 @@
   },
   "author": "",
   "license": "ISC",
-  "dependencies": {
-    "cors": "^2.8.5",
-    "express": "^4.18.2"
-  },
   "devDependencies": {
-    "cargo-cp-artifact": "^0.1.8"
+    "cargo-cp-artifact": "^0.1"
   }
 }
