--- a/Cargo.toml
+++ b/Cargo.toml
@@ -17,6 +17,8 @@ prost-types = "0.11.8"
 rand = "0.8.5"
 num-traits = "0.2.14"
 rayon = "1.7.0"
+serde = { version = "1.0.193", features = ["derive"] }
+serde_json = "1.0"
 
 
 [build-dependencies]
