--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,7 +10,9 @@
     "react-dom": "^18.2.0",
     "react-graph-vis": "^1.0.7",
     "react-scripts": "5.0.1",
-    "web-vitals": "^2.1.4"
+    "web-vitals": "^2.1.4",
+    "d3": "^7.8.5",
+    "react-d3-tree": "^3.6.1"
   },
   "scripts": {
     "start": "react-scripts start",
