--- a/backend/Cargo.toml
+++ b/backend/Cargo.toml
@@ -25,7 +25,7 @@ num-traits = "0.2.14"
 rayon = "1.7.0"
 serde = { version = "1.0.193", features = ["derive"] }
 serde_json = "1.0"
-pyo3 = { version = "0.20.0", features = ["extension-module"], optional = true }
+pyo3 = { version = "0.19.2", features = ["extension-module"], optional = false }
 
 [dependencies.neon]
 version = "0.10"
