--- a/frontend/package.json
+++ b/frontend/package.json
@@ -6,10 +6,13 @@
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "antd": "^5.12.8",
     "d3": "^7.8.5",
+    "dagre": "^0.8.5",
     "react": "^18.2.0",
     "react-d3-tree": "^3.6.1",
     "react-dom": "^18.2.0",
+    "react-flow-renderer": "^10.3.17",
     "react-graph-vis": "^1.0.7",
     "react-scripts": "5.0.1",
     "web-vitals": "^2.1.4"
